src/assets/styles.css
/* ... */
/* Set the first one to red cause we want to draw the most attention to that */
.home-4__stats:nth-child(1) > h1 {
    color: var(--ecf-red);
}

.home-4__stats > h2 {
    font-size: calc(var(--h2-size) * 1.35);
}

.home-4 > div:last-child {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 2vw;
    margin: 0 5vw;
}

.home-4 > div:last-child > img {
    display: flex;
    max-width: 100%;
    max-height: 100%;
    width: auto;
    height: auto;
    align-self: center;
    padding: 0 0 10vh;
}

.home-4 > div:last-child > div {
    display: flex;
    flex-direction: column;
    row-gap: 4vh;
    text-align: center;
    align-items: center;
    align-self: center;
}

.home-4__difference {
    color: var(--ecf-green);
}

/* Home end */

/* Get Involved start */
.get-involved-1 {
}

.get-involved-1__bg {
    background-image: url("./img/get-involved/get-involved-1.webp");
}

.get-involved-2 {
    display: flex;
    flex-direction: column;
    row-gap: 10vh;
    min-height: 40vh;
    padding: 20vh 5vw 10vh;
}

.get-involved-2 > div:first-child {
    display: flex;
    flex-direction: column;
    row-gap: 10vh;
    width: 30vw;
    align-self: center;
    align-items: center;
    text-align: center;
}

.get-involved-3__upcoming {
    display: flex;
    flex-direction: column;
    row-gap: 2vh;
    padding: 5vh 3vw;
}

.get-involved-3__upcoming > h1 {
    color: var(--ecf-green);
}

.get-involved-3 {
    position: relative;
}

.get-involved-3__bg {
    background-image: url("./img/get-involved/get-involved-3.webp");
}

.get-involved-3__oval {
    position: absolute;
    width: 145%;
    height: 100%;
    /* Position past left then hide overflow to achieve desired effect */
    left: -70%;
    overflow: hidden;
    background-color: var(--ecf-green-translucent);
    /* I literally have no idea why this works. Some horizontal and vertical radius magic ig */
    border-top-right-radius: 50% 100%;
}

.get-involved-3__overlay {
    display: flex;
    flex-direction: column;
    row-gap: 2vh;
    position: absolute;
    left: 52.5%;
    bottom: 20%;
    color: white;
}

.get-involved-3__overlay > h1 {
    width: 40vw;
    line-height: 1.5;
    font-size: calc(var(--h1-size) * 1.35);
    padding: 5vh 0;
}

.get-involved-3__overlay > h2 {
    width: 20vw;
    line-height: 1.5;
}

.get-involved-4 {
    display: flex;
    flex-direction: column;
    background-color: var(--ecf-green);
}

.get-involved-4 > div:first-child {
    display: flex;
    flex-direction: column;
    padding: 15vh 5vw 28vh;
    row-gap: 5vh;
    background-color: white;
}

.get-involved-4 > div:first-child > h1 {
    color: var(--ecf-green);
}

.get-involved-4 > div:nth-child(2) {
    display: flex;
    flex-wrap: wrap;
    column-gap: 2vw;
    row-gap: 5vh;
    padding: 5vh 1vw;
    /*
    abs(negative margin) needs to be less than the bottom padding for .getInvolved4 > div:first-child.
    This is needed so that the cards flow into a white background
    */
    margin: -20vh 0 0;
    justify-content: space-evenly;
}

.get-involved-4__past-event {
    width: 28vw;
    /* Arbitrary min-width to ensure that it wraps */
    min-width: var(--arbitrary-card-min-width);
    padding: 0 0 5vh;
    text-align: center;
    background-color: white;
}

.get-involved-4__past-event > img {
    width: 100%;
    height: 30vh;
}

.get-involved-4__past-event > div {
    padding: 1vh 3vw 0;
}

.get-involved-4__past-event h1 {
    font-size: calc(var(--h1-size) * 0.75);
}

.get-involved-4__past-event h2 {
    line-height: 1.5;
}

.get-involved-4__past-event--hidden {
    display: none;
}

.get-involved-4 > .transparent-button--white {
    align-self: center;
    margin: 3vh 0 5vh;
    min-width: var(--arbitrary-card-min-width);
}

.get-involved-4 > .transparent-button--hidden {
    display: none;
}

.get-involved-4__filler {
    height: 5vh;
    background-color: white;
}

/* Get Involved end */

/* About Us start */
.about-us-1__bg {
    background-image: url("./img/about-us/about-us-1.webp");
}

.about-us-2 {
    display: flex;
    flex-direction: column;
    row-gap: 10vh;
    min-height: 40vh;
    padding: 20vh 5vw 0;
}

.about-us-2__work {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    /* TODO green circles around the icons */
}

.about-us-2__work > div {
    display: flex;
    flex-direction: column;
    place-items: center;
}

.about-us-2__icons {
    /* The dimension of the width and height should be the same (it's ok to denote height in terms of vw and vice versa! */
    --icon-dimensions: 3vw;
    width: var(--icon-dimensions);
    height: var(--icon-dimensions);
    font-weight: 100;
    color: white;
    stroke: var(--ecf-green-translucent);
    stroke-width: 20;
    padding: 2vh;
    border-radius: 100%;
    background-color: var(--ecf-green-translucent);
}

.about-us-3 {
    --header-height: 15vh;
    --showcase-height: 80vh;
    display: grid;
    grid-template:
        "ca ca ca ca ca ca" var(--header-height)
        "bc bc bc bc bc bc" var(--showcase-height)
        "ab ab sk sk on on" var(--showcase-height)
        "int int int int int int" var(--header-height)
        "tr tr tr us us us" var(--showcase-height)
        / 1fr 1fr 1fr 1fr 1fr 1fr;
    width: 100%;
    height: calc(2 * var(--header-height) + 3 * var(--showcase-height));
}

.about-us-3__canadian,
.about-us-3__international {
    display: flex;
    flex-direction: column;
    row-gap: 2vh;
    padding: 0 3vw;
}

.about-us-3__canadian > h1,
.about-us-3__international > h1 {
    color: var(--ecf-green);
}

.about-us-3__canadian {
    grid-area: ca;
}

.about-us-3__international {
    grid-area: int;
    padding: 5vh 3vw;
}

.about-us-3__bc {
    grid-area: bc;
}

.about-us-3__bc__bg {
    background-image: url("./img/about-us/about-us-bc.webp");
}

.about-us-3__ab {
    grid-area: ab;
}
/* ... */

